feat: expose mobile catalog related content
